Fix search city input

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,6 @@
   border-radius: 0.25rem !important;
   z-index: 1;
 }
-.rbt-input-hint-container {
-  overflow: hidden;
+.rbt-input-hint {
+  width: 113px;
 }
