--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,3 @@
-.ant-timeline.ant-timeline-label .ant-timeline-item-head-custom {
-	margin-top: 10px;
-}
-.ant-timeline.ant-timeline-tail {
-	height: calc(100% - 6px);
-}
-.ant-timeline.ant-timeline-label .ant-timeline-item-left .ant-timeline-item-label {
-	right: calc(50% + 14px);
-	width: auto;
+.text-monospace {
+	font-family: SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace;
 }
